app/client/style.css
@import url('https://fonts.googleapis.com/css?family=Comfortaa');


.ui.borderless.topmenu.menu{
  background-color: #66B9CC;
  box-shadow: none;
  border:none;
  font-size: 20px !important;
  border-radius: 0 !important;
}

.landingPage{
    background: url('images/landingBackground.jpg') no-repeat center center fixed;
    background-size: cover;
    height: 675px;
}

.signupPage{
  background: url('images/avacadobackground.jpg') no-repeat center center fixed;
  background-size: cover;
  color: white;
  height: 700px;
}

.signinPage{
  background: url('images/sushibackground.jpg') no-repeat center center fixed;
  font-family: 'Comfortaa', sans-serif;
  background-size: cover;
  height: 700px;
}

/*.ui.header.firstHeader{*/
/*    color: red;*/
/*    text-shadow: -2px 2px 3px gray;*/
/*    font-size: 50px;*/
/*}*/

.ui.header.firstHeader{
  color: palevioletred;
  text-shadow: -2px 2px 3px whitesmoke;
  font-size: 50px;
}

.ui.header.cuisine{
    color: white;
    text-shadow: -4px 4px 6px #66B9CC;
    font-size: 50px;
}

.ui.header.secondHeader{
    color: white;
    text-shadow: -2px 2px 3px gray;
}

.ui.header.thirdHeader{
  color: white;
  font-family: 'Comfortaa', sans-serif;
  font-size: 28px;
  text-align: justify;
}

.ui.grid.column.leftGrid{
    background-color: blue;
    height: 300px;
}

.headertext{
  text-decoration: none;
  overflow: hidden;
}

.headertext:hover{
  text-decoration: underline;
}

div.text:hover{
  text-decoration: underline;
}

.footer-background {
  font-family: 'Comfortaa', sans-serif;
  background-color: #A8C987;
  font-size: medium;
  letter-spacing: normal;
  line-height: 1.5em;
  color: white;
  alignment: center;
}

.buttons-style{
  font-family: 'Comfortaa', sans-serif;
  background-color: #A8C987;
  font-size: large;
  color: white;
  alignment: center;
}

.ui.yellow.button {
  background-color: #F3C347 !important;
  font-family: 'Comfortaa', sans-serif;
  color: #FFFFFF;
  text-shadow: none;
  background-image: none;
}

.ui.teal.button {
  background-color: #A8C987 !important;
  font-family: 'Comfortaa', sans-serif;
  color: #FFFFFF;
  text-shadow: none;
  background-image: none;
}
#mapBackground {
  background: url(images/maps/snackademic-map-no-rotating-trucks.jpg);
}

